tests/ui/snapshots/ui__test_log__log_view_empty.snap
---
source: tests/ui/test_log.rs
expression: terminal.backend()
---
"┌─────────────────────────────── Tij - Log View ───────────────────────────────┐"
"│                                                                              │"
"│                               No changes found.                              │"
"│                                                                              │"
"│                        Hint: Try '/' with revset all()                       │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
