tests/ui/snapshots/ui__test_log__log_view_search_input.snap
---
source: tests/ui/test_log.rs
expression: terminal.backend()
---
"┌─────────────────────────────── Tij - Log View ───────────────────────────────┐"
"│@  kxryzmql test@example.com 2025-01-15 10:30:00 Some change                  │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ / Search ────────────────────────────────────────────────────────────────────┐"
"│Search: auth                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────┘"
