tests/ui/snapshots/ui__test_log__log_view_with_revset.snap
---
source: tests/ui/test_log.rs
expression: terminal.backend()
---
"┌──────────────────── Tij - Log View [ancestors(@, 5) (2)] ────────────────────┐"
"│@  kxryzmql test@example.com 2025-01-15 10:30:00 Latest change                │"
"│○  mzvwqtsr test@example.com 2025-01-15 10:30:00 Parent change                │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
